GNOME Bugzilla – Bug 101128
File types and Programs capplet crashes when highlight file type
Last modified: 2004-12-22 21:47:04 UTC
Package: control-center Product: control-center Synopsis: File types and Programs capplet crashes when highlight file type Severity: normal Priority: Urgent Bugzilla-Product: control-center BugBuddy-GnomeVersion: 2.0 (see comments, happens only with accessibility 'on' by gconftool). Running gnoem fcs-02, solaris 9 (ultra sparc) When a user clicks on a file type the capplet crashes To Recreate ------------ o Start gnome-file-types-properties o Expand the Audio category o Click on any file type stack trace ----------- 17697: gnome-file-types-properties fe41dfc0 waitid (0, 4522, ffbfe7e8, 3) fe3d7544 _waitpid (4522, ffbfe94c, 0, 0, 48a88, 1d30) + 5c fe66f1a4 waitpid (4522, ffbfe94c, 0, 3800, fec8c870, 3a24) + 5c ff2586b4 ???????? (a, 44fc, 53cc8, ff2b5bd4, 4400, ff2ac2b8) fe6760a0 __sighndlr (a, 0, ffbfeb10, ff2585ec, 0, 0) + c fe66fdd8 call_user_handler (a, 0, ffbfeb10, 0, 0, 0) + 234 fe66ff88 sigacthandler (a, 0, ffbfeb10, 0, a0738, a0738) + 64 --- called from signal handler with signal 10 (SIGBUS) --- 000160e8 ???????? (a1a00, ffbfee88, 13c00, 2d1, 11b7bc, 1e000) fe1a7fa8 ???????? (a1a00, 19b9c8, ffbfeefc, 11ab84, 11b7bc, 0) fe1a8174 ???????? (a1a00, 2, ffbfeff8, fe1a78bc, 1daa0, 39000) fe1a8288 ???????? (9ed78, 20, ffbfeff8, ffbfeff4, 52ef0, 9fbb0) fe1a27dc ???????? (9fbb0, 20, 9fbb0, 0, f7700, 9ed78) fe1a2504 gail_tree_view_ref_focus_cell (9ed78, 515d8, 9fbb0, 1, 799c0, 10de38) + 6c fe1a5510 ???????? (9ed78, 3, c, 4000, 1, 0) fe5b1160 ???????? (4bba0, fe672aa4, 4000, 0, fe61864c, 4bba8) fe5b24c8 g_main_context_dispatch (4bba0, 1, fe61df2c, 40b4, fe61df28, 2) + a8 fe5b28d8 ???????? (4bba0, 1, 1, 1, 4bba8, 12dbf0) fe5b31e4 g_main_loop_run (10cc20, 4000, 0, fe61df2c, 32d18, fe61df30) + 300 fee1dbd8 gtk_main (1, 0, 10cc20, 8c00, ff013260, 0) + f8 00015388 main (1, ffbff384, 1d800, 7f1c8, 1d800, 1d800) + 19c 00014b58 _start (0, 0, 0, 0, 0, 0) + 108 dbx output ---------- (gnome-file-types-properties:17702): Gtk-CRITICAL **: file gtktreemodel.c: line 439: assertion `a->depth > 0' failed (gnome-file-types-properties:17702): Gtk-CRITICAL **: file gtktreemodel.c: line 721: assertion `path->depth > 0' failed t@1 (l@1) signal SEGV (no mapping at the fault address) in (unknown) at 0x164a8 0x000164a8: ld [%o0 + 0xc], Bugtraq+: 4778184 ------- Bug moved to this database by unknown@bugzilla.gnome.org 2002-12-13 09:47 ------- Reassigning to the default owner of the component, control-center-maint@bugzilla.gnome.org.
This trace is nearly useless- there is only one useful symbol in here, and it is in gail. Please recompile with symbols before submitting it again.
I have investigated this and have a proposed patch
Created attachment 13021 [details] [review] Proposed patch
Looks good. Applied to HEAD. Feel free to apply to 2.0 also if desired.