http://bugzilla.gnome.org/show_bug.cgi?id=101128 apply patch from padraig.

2002-12-30  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=101128
	* mime-types-model.c (mime_types_model_iter_children) : apply patch
	  from padraig.